--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 *** Unreleased
 
+* Simply map every field from bibtex and adds some custom ones
 * Adds youtube field
 * Adds raw field
 * Adds preprint field
